Fix scrollbar

--- a/src/components/Ship/ShipLinks/ship-links.module.scss
+++ b/src/components/Ship/ShipLinks/ship-links.module.scss
@@ -15,8 +15,11 @@
 	}
 
 	&::-webkit-scrollbar {
+		display: none;
 		width: 0;
 		height: 0;
+		opacity: 0;
+		background-color: transparent;
 	}
 }
 
